--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
-h1{
-    text-align:center;
-    margin:0,auto;
+p{
+    font-size: xx-large;
+}
+table{
+    font-size: x-large;
+}
+li{
+    font-size: x-large;
+}
+strong{
+    font-size: x-large;
+    padding:30px;
+}
+ul.nav{
+    margin-left: 0px;
+    padding-left: 0px;
+    list-style: none;
+}
 
+
+ul.nav a {
+    display: inline-block;
+    width: 7em;
+    padding:10px;
+    background-color: #f4f4f4;
+    border-top: 1px dashed #333;
+    border-right: 1px dashed #333;
+    border-left: 5px solid #333;
+    text-decoration: none;
+    color: #333;
+}
+ul.nav li:last-child a {
+    border-bottom: 1px dashed #333;
 }
