--- a/style.css
+++ b/style.css
@@ -6,15 +6,17 @@ table{
 }
 li{
     font-size: x-large;
+    font-family: Arial;
 }
 strong {
     font-size: x-large;
     margin-bottom: 20px;
+    font-family: "Arial Narrow";
 }
 
 ul.nav{
-    margin-left: 0px;
-    padding-left: 0px;
+    margin-left: 10px;
+    padding-left: 10px;
     list-style: none;
 }
 
@@ -95,3 +97,24 @@ h1{
     border-radius: 2em;
     transition: all .3s ease-out;
 }
+i{
+    font-size:20px;
+}
+img{
+    width:30%;
+    height:30%;
+   margin:30px;
+    display:block;
+    margin:auto;
+}
+body {
+    background: url("img/back.jpg ");
+    margin:0;
+}
+ol{
+    margin-left:15px;
+}
+b.sugar{
+    font-size:30px;
+}
+
