--- a/style.css
+++ b/style.css
@@ -1,13 +1,120 @@
-p{
-    font-size: x-large;
-    margin-left:30px;
+/*Обнуление*/
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
-table{
+*,*:before,*:after{
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+
+body{
+    padding: 25px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background: url(../img/bg_repeat.jpg);
+}
+
+.content{
+    display: flex;
+    height: 100%;
+}
+
+.navigation{
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    height: 100%;
+
+}
+
+.navigation_title{
+    display: block;
+    margin: 0px auto;
+    font-size: 24px;
+}
+
+.navigation_link{
+    display: block;
+    margin: 0px auto;
+    height: 42px;
+    line-height: 42px;
+    width: 160px;
+    color: black;
+    background-color: #f4f4f4;
+    border-radius: 13px;
+    padding-left: 13px;
+    margin-top: 10px;
+
+}
+
+.navigation_linkf{
+    display: block;
+    margin: 0px auto;
+    height: 42px;
+    line-height: 42px;
+    width: 160px;
+    color: black;
+    background-color: #f4f4f4;
+    border-radius: 13px;
+    padding-left: 13px;
+    margin-top: 30px;
+}
+
+.navigation_link:hover{
+    background-color: #fff;
+}
+
+.navigation_linkf:hover{
+    background-color: #fff;
+}
+
+.content_right{
+    width: 85%;
+    height: 100%;
+    background-color: rgba(252,252,252, 0.5);
+}
+p {
+    font-size: x-large;
+    margin-left: 30px;
+}
+
+table {
     font-size: x-large;
 }
-li{
+
+li {
     font-size: large;
 }
+
 strong {
     font-size: x-large;
     margin-bottom: 20px;
@@ -19,39 +126,46 @@ h1.menu {
 }
 
 table {
-    font-family:"Arial Narrow";
+    font-family: "Arial Narrow";
     font-size: 25px;
     border-collapse: collapse;
     text-align: center;
-    margin-left:10px;
+    margin-left: 10px;
 }
+
 th, td:first-child {
     background: #AFCDE7;
     color: white;
     padding: 10px 20px;
 }
+
 th, td {
     border-style: solid;
     border-width: 0 1px 1px 0;
     border-color: white;
 }
+
 td {
     background: #D8E6F3;
 }
+
 th:first-child, td:first-child {
     text-align: left;
 }
-h1{
+
+h1 {
     font-size: xx-large;
     text-align: center;
 }
+
 .rounded {
     counter-reset: li;
     list-style: none;
     font: 10px;
     padding: 0;
-    text-shadow: 0 1px 0 rgba(255,255,255,.5);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
 }
+
 .rounded a {
     position: relative;
     display: block;
@@ -63,8 +177,15 @@ h1{
     border-radius: .3em;
     transition: .3s ease-out;
 }
-.rounded a:hover {background: #E9E4E0;}
-.rounded a:hover:before {transform: rotate(360deg);}
+
+.rounded a:hover {
+    background: #E9E4E0;
+}
+
+.rounded a:hover:before {
+    transform: rotate(360deg);
+}
+
 .rounded a:before {
     content: counter(li);
     counter-increment: li;
@@ -82,79 +203,45 @@ h1{
     border-radius: 2em;
     transition: all .3s ease-out;
 }
-i{
-    font-size:20px;
+
+i {
+    font-size: 20px;
 }
-img{
-    width:30%;
-    height:30%;
-   margin:30px;
-    display:block;
-    margin:auto;
-    margin-top:20px;
+
+img {
+    width: 30%;
+    height: 30%;
+    margin: 30px;
+    display: block;
+    margin: auto;
+    margin-top: 20px;
 }
+
 body {
     background: url("img/back.jpg ");
-    margin:0;
+    margin: 0;
 }
-ol{
-    margin-left:15px;
+
+ol {
+    margin-left: 15px;
 }
-b.sugar{
-    font-size:30px;
+
+b.sugar {
+    font-size: 30px;
 }
+
 div.scrollmenu {
     background-color: #111111;
     overflow: auto;
     white-space: nowrap;
 
 }
+
 div.scrollmenu a {
     dispaly: inline-block;
-    color:white;
-    text-align:center;
-    padding:14px;
-    text-decoration:none;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
 
-}
-
-div.scrollmenu a:hover {
-    background-color: #777;
-
-}
-}
-
-.sidenav {
-    height:100%;
-    width:200px;
-    position:fixed;
-    z-index:1;
-    top:0;
-    left:0;
-    background-color:#111;
-    overflow-x:hidden;
-    padding-top:20px;
-}
-.sidenav a{
-    padding:6px 8px 6px 16px;
-    text-decoration:none;
-    font-size: 25px;
-    color:#000;
-    display: block;
-}
-.sidenav a:hover {
-    color: #818181;
-}
-.main {
-     margin-left:160px;
-
-     padding: 0px 10px;
- }
-@media screen and (max-height:450px) {
-    .sidenav {
-        padding-top:15px;
-    }
-    .sidenav a {
-        font-size:18px;
-    }
 }
