--- a/style.css
+++ b/style.css
@@ -1,3 +1,107 @@
+/*Обнуление*/
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+*,*:before,*:after{
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+
+body{
+    padding: 25px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background: url(../img/bg_repeat.jpg);
+}
+
+.content{
+    display: flex;
+    height: 100%;
+}
+
+.navigation{
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    height: 100%;
+
+}
+
+.navigation_title{
+    display: block;
+    margin: 0px auto;
+    font-size: 24px;
+}
+
+.navigation_link{
+    display: block;
+    margin: 0px auto;
+    height: 42px;
+    line-height: 42px;
+    width: 160px;
+    color: black;
+    background-color: #f4f4f4;
+    border-radius: 13px;
+    padding-left: 13px;
+    margin-top: 10px;
+
+}
+
+.navigation_linkf{
+    display: block;
+    margin: 0px auto;
+    height: 42px;
+    line-height: 42px;
+    width: 160px;
+    color: black;
+    background-color: #f4f4f4;
+    border-radius: 13px;
+    padding-left: 13px;
+    margin-top: 30px;
+}
+
+.navigation_link:hover{
+    background-color: #fff;
+}
+
+.navigation_linkf:hover{
+    background-color: #fff;
+}
+
+.content_right{
+    width: 85%;
+    height: 100%;
+    background-color: rgba(252,252,252, 0.5);
+}
 p {
     font-size: x-large;
     margin-left: 30px;
@@ -127,7 +231,7 @@ b.sugar {
 }
 
 div.scrollmenu {
-    background-color: #111;
+    background-color: #111111;
     overflow: auto;
     white-space: nowrap;
 
@@ -140,49 +244,4 @@ div.scrollmenu a {
     padding: 14px;
     text-decoration: none;
 
-}
-
-div.scrollmenu a:hover {
-    background-color: #ffffff;
-
-}
-
-.sidenav {
-    height: 100%;
-    width: 130px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #777;
-    overflow-x: hidden;
-    padding-top: 20px;
-}
-
-.sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #000;
-    display: block;
-}
-
-.sidenav a:hover {
-    color: #ffffff;
-}
-
-.main {
-    margin-left: 160px;
-
-    padding: 0px 10px;
-}
-
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-
-    .sidenav a {
-        font-size: 18px;
-    }
 }
