--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
 /*Обнуление*/
-*{
+* {
     padding: 0;
     margin: 0;
     border: 0;
 }
-*,*:before,*:after{
+
+*, *:before, *:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
 
-nav,footer,header,aside{display: block;}
+:focus, :active {
+    outline: none;
+}
 
-html,body{
+a:focus, a:active {
+    outline: none;
+}
+
+nav, footer, header, aside {
+    display: block;
+}
+
+html, body {
     height: 100%;
     width: 100%;
     font-size: 100%;
@@ -24,45 +33,69 @@ html,body{
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
-input,button,textarea{font-family:inherit;}
 
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
+input, button, textarea {
+    font-family: inherit;
+}
 
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+input::-ms-clear {
+    display: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+a, a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+ul li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    font-weight: 400;
+}
+
 /*--------------------*/
 
-body{
+body {
     padding: 25px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background: url(../img/bg_repeat.jpg);
 }
 
-.content{
+.content {
     display: flex;
-    height: 100%;
 }
 
-.navigation{
+.navigation {
     display: flex;
     flex-direction: column;
-    width: 15%;
-    height: 100%;
-
 }
 
-.navigation_title{
+.navigation_title {
     display: block;
     margin: 0px auto;
     font-size: 24px;
 }
 
-.navigation_link{
+.navigation_link {
     display: block;
     margin: 0px auto;
     height: 42px;
@@ -76,7 +109,7 @@ body{
 
 }
 
-.navigation_linkf{
+.navigation_linkf {
     display: block;
     margin: 0px auto;
     height: 42px;
@@ -89,36 +122,33 @@ body{
     margin-top: 30px;
 }
 
-.navigation_link:hover{
+.navigation_link:hover {
     background-color: #fff;
 }
 
-.navigation_linkf:hover{
+.navigation_linkf:hover {
     background-color: #fff;
 }
 
-.content_right{
-    width: 85%;
-    height: 100%;
-    background-color: rgba(252,252,252, 0.5);
+.content_right {
+    max-width: 800px;
+    padding: 14px;
+    margin: 14px;
+    border-radius: 8px;
+    box-shadow: 1px 1px 15px #00000036;
+    background-color: rgba(252, 252, 252, 71%);
 }
+
 p {
-    font-size: x-large;
-    margin-left: 30px;
-}
-
-table {
-    font-size: x-large;
+    margin-top: 10px;
 }
 
 li {
-    font-size: large;
+
 }
 
 strong {
-    font-size: x-large;
-    margin-bottom: 20px;
-    font-family: "Arial Narrow";
+    font-size: 16px;
 }
 
 h1.menu {
@@ -126,11 +156,9 @@ h1.menu {
 }
 
 table {
-    font-family: "Arial Narrow";
-    font-size: 25px;
     border-collapse: collapse;
     text-align: center;
-    margin-left: 10px;
+    margin-left: 10px 0;
 }
 
 th, td:first-child {
@@ -143,6 +171,7 @@ th, td {
     border-style: solid;
     border-width: 0 1px 1px 0;
     border-color: white;
+    padding: 6px;
 }
 
 td {
@@ -154,7 +183,8 @@ th:first-child, td:first-child {
 }
 
 h1 {
-    font-size: xx-large;
+    font-size: 17px;
+    margin: 10px;
     text-align: center;
 }
 
@@ -209,12 +239,11 @@ i {
 }
 
 img {
-    width: 30%;
-    height: 30%;
-    margin: 30px;
+    max-width: 200px;
+    border-radius: 8px;
     display: block;
     margin: auto;
-    margin-top: 20px;
+    box-shadow: 1px 1px 15px #00000036;
 }
 
 body {
@@ -227,7 +256,8 @@ ol {
 }
 
 b.sugar {
-    font-size: 30px;
+/ /*font-size: 30px;*/
+/
 }
 
 div.scrollmenu {
@@ -244,4 +274,8 @@ div.scrollmenu a {
     padding: 14px;
     text-decoration: none;
 
+}
+
+strong.type {
+    font-size 17px;
 }
