--- a/style.css
+++ b/style.css
@@ -1,64 +1,99 @@
 /*Обнуление*/
-*{
+* {
     padding: 0;
     margin: 0;
     border: 0;
 }
-*,*:before,*:after{
+
+*, *:before, *:after {
     -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    font-size: 12px;
 }
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
 
-nav,footer,header,aside{display: block;}
+:focus, :active {
+    outline: none;
+}
 
-html,body{
+a:focus, a:active {
+    outline: none;
+}
+
+nav, footer, header, aside {
+    display: block;
+}
+
+html, body {
     height: 100%;
     width: 100%;
-    font-size: 100%;
     line-height: 1;
     font-size: 14px;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
-input,button,textarea{font-family:inherit;}
 
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
+input, button, textarea {
+    font-family: inherit;
+}
 
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+input::-ms-clear {
+    display: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+a, a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+ul li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    font-weight: 400;
+}
+
 /*--------------------*/
 
-body{
+body {
     padding: 25px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background: url(../img/bg_repeat.jpg);
 }
 
-.content{
+.content {
     display: flex;
 }
 
-.navigation{
+.navigation {
     display: flex;
     flex-direction: column;
 }
 
-.navigation_title{
+.navigation_title {
     display: block;
     margin: 0px auto;
     font-size: 24px;
 }
 
-.navigation_link{
+.navigation_link {
     display: block;
     margin: 0px auto;
     height: 42px;
@@ -72,7 +107,7 @@ body{
 
 }
 
-.navigation_linkf{
+.navigation_linkf {
     display: block;
     margin: 0px auto;
     height: 42px;
@@ -85,24 +120,25 @@ body{
     margin-top: 30px;
 }
 
-.navigation_link:hover{
+.navigation_link:hover {
     background-color: #fff;
 }
 
-.navigation_linkf:hover{
+.navigation_linkf:hover {
     background-color: #fff;
 }
 
-.content_right{
-    max-width:800px;
-    padding:14px;
-    margin:14px;
-    border-radius:8px;
-    box-shadow: 1px 1px 15px #00000036;
-    background-color: rgba(252,252,252, 71%);
+.content_right {
+    max-width: 800px;
+    padding: 14px;
+    margin: 14px;
+    border-radius: 8px;
+    box-shadow: 1px 1px 15px  #00000036;
+    background-color: rgba(252, 252, 252,71%);
 }
+
 p {
-margin-top:10px;
+    margin-top: 10px;
 }
 
 li {
@@ -110,7 +146,7 @@ li {
 }
 
 strong {
-    font-size:16px;
+    font-size: 16px;
 }
 
 h1.menu {
@@ -120,7 +156,7 @@ h1.menu {
 table {
     border-collapse: collapse;
     text-align: center;
-    margin-left: 10px 0;
+    margin-left: 10px;
 }
 
 th, td:first-child {
@@ -133,7 +169,7 @@ th, td {
     border-style: solid;
     border-width: 0 1px 1px 0;
     border-color: white;
-    padding:6px;
+    padding: 6px;
 }
 
 td {
@@ -146,14 +182,14 @@ th:first-child, td:first-child {
 
 h1 {
     font-size: 17px;
-    margin:10px;
+    margin: 10px;
     text-align: center;
 }
 
 .rounded {
     counter-reset: li;
     list-style: none;
-    font: 10px;
+    font-size: 10px;
     padding: 0;
     text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
 }
@@ -202,7 +238,7 @@ i {
 
 img {
     max-width: 200px;
-    border-radius:8px;
+    border-radius: 8px;
     display: block;
     margin: auto;
     box-shadow: 1px 1px 15px #00000036;
@@ -218,7 +254,8 @@ ol {
 }
 
 b.sugar {
-    //*font-size: 30px;*//
+/ /*font-size: 30px;*/
+/
 }
 
 div.scrollmenu {
@@ -229,13 +266,14 @@ div.scrollmenu {
 }
 
 div.scrollmenu a {
-    dispaly: inline-block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px;
     text-decoration: none;
 
 }
+
 strong.type {
-    font-size 17px;
+    font-size: 17px;
 }
