--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     padding: 25px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background: url(../img/bg_repeat.jpg);
+    background: url(/img/back.jpg);
 }
 
 .content {
@@ -85,6 +85,7 @@ body {
 .navigation {
     display: flex;
     flex-direction: column;
+    margin:14px 0 14px;
 }
 
 .navigation_title {
@@ -134,7 +135,7 @@ body {
     margin: 14px;
     border-radius: 8px;
     box-shadow: 1px 1px 15px  #00000036;
-    background-color: rgba(252, 252, 252,71%);
+    background-color: rgba(252, 252, 252,71);
 }
 
 p {
@@ -275,25 +276,61 @@ strong.type {
 }
 
 footer {
-    display: flex;
-    width: 98%;
-    background: #111;
+    background: rgb(101, 101, 101);
     margin-top: 24px;
-    justify-content: space-between;
+    width:100%;
 }
-ul {
+p.footer1{
     padding: 1.25rem;
     text-align: center;
-}
-ul li {
-    list-style-type: none;
-    display: inline-block;
+    display: flex;
+    justify-content: space-around;
     margin: 0.25rem 0.75rem;
+    width: 100%;
 }
-ul a {
+
+
+p a{
     color: #fff;
     text-decoration: none;
 }
-ul a:hover {
-    text-decoration: underline;
+p a:hover {
+    text-decoration: underline; }
+.switch {
+    position: absolute;
+    top:4%;
+    left:70%;
+    transform:translate( -50%,-50%);
+}
+input[type="checkbox"] {
+    position:relative;
+    width:80px;
+    height: 40px;
+    -webkit-appearance:none;
+    background:#c6c6c6;
+    outline:none;
+    border-radius:20px;
+    transition: .5s;
+    box-shadow: inset 0 0 5px rgba(0,0,0,.2);
+}
+input:checked[type="checkbox"]{
+    background: #641de5;
+}
+
+input[type="checkbox"]:before{
+     content:'';
+    position: absolute;
+    width:40px;
+    height:40px;
+    border-radius: 20px;
+    top:0;
+    left:0;
+    background: #fff;
+    transition: .5s;
+    transform: scale(1.1);
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+    background-image:url("img/moon.png");
+}
+input:checked[type="checkbox"]:before{
+    left:40px;
 }
